--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "prisma generate && next build --turbopack"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.893.0",
     "@clerk/nextjs": "^6.31.6",
     "@prisma/client": "^6.15.0",
     "@vercel/analytics": "^1.5.0",
