--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "orgle-stream",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.18.1",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build --turbopack",
