--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-intl": "^4.3.5",
     "prisma": "^6.15.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
